added all content on html file

--- a/index.html
+++ b/index.html
@@ -8,7 +8,24 @@
     <title></title>
   </head>
   <body>
-    
+    <button type="button" name="C"> C </button>
+    <button type="button" name="inputBar"></button>
+    <button type="button" name="7"> 7 </button>
+    <button type="button" name="8"> 8 </button>
+    <button type="button" name="9"> 9 </button>
+    <button type="button" name="/"> / </button>
+    <button type="button" name="4"> 4 </button>
+    <button type="button" name="5"> 5 </button>
+    <button type="button" name="6"> 6 </button>
+    <button type="button" name="*"> * </button>
+    <button type="button" name="1"> 1 </button>
+    <button type="button" name="2"> 2 </button>
+    <button type="button" name="3"> 3 </button>
+    <button type="button" name="-"> - </button>
+    <button type="button" name="0"> 0 </button>
+    <button type="button" name="."> . </button>
+    <button type="button" name="="> = </button>
+    <button type="button" name="+"> + </button>
 
   </body>
 </html>
