--- a/index.html
+++ b/index.html
@@ -3,29 +3,30 @@
   <head>
     <meta charset="utf-8">
     <link
-          rel="stylesheet" href="2.4-calculator/main.css">
+          rel="stylesheet" href="styles/main.css">
     <script src="2.4-calculator/main.js" charset="utf-8"></script>
     <title></title>
   </head>
   <body>
-    <button type="button" name="C"> C </button>
-    <button type="button" name="inputBar"></button>
-    <button type="button" name="7"> 7 </button>
-    <button type="button" name="8"> 8 </button>
-    <button type="button" name="9"> 9 </button>
-    <button type="button" name="/"> / </button>
-    <button type="button" name="4"> 4 </button>
-    <button type="button" name="5"> 5 </button>
-    <button type="button" name="6"> 6 </button>
-    <button type="button" name="*"> * </button>
-    <button type="button" name="1"> 1 </button>
-    <button type="button" name="2"> 2 </button>
-    <button type="button" name="3"> 3 </button>
-    <button type="button" name="-"> - </button>
-    <button type="button" name="0"> 0 </button>
-    <button type="button" name="."> . </button>
-    <button type="button" name="="> = </button>
-    <button type="button" name="+"> + </button>
-
+      <div class="calculator__details">
+          <button class="button__details" type="button" name="C"> C </button>
+          <textarea class="input__details"name="name" rows="8" cols="80"></textarea>
+          <button class="button__details" type="button" name="7"> 7 </button>
+          <button class="button__details" type="button" name="8"> 8 </button>
+          <button class="button__details" type="button" name="9"> 9 </button>
+          <button class="button__details button__light--green" type="button" name="/"> / </button>
+          <button class="button__details" type="button" name="4"> 4 </button>
+          <button class="button__details" type="button" name="5"> 5 </button>
+          <button class="button__details" type="button" name="6"> 6 </button>
+          <button class="button__details button__light--green" type="button" name="*"> * </button>
+          <button class="button__details" type="button" name="1"> 1 </button>
+          <button class="button__details" type="button" name="2"> 2 </button>
+          <button class="button__details" type="button" name="3"> 3 </button>
+          <button class="button__details button__light--green" type="button" name="-"> - </button>
+          <button class="button__details" type="button" name="0"> 0 </button>
+          <button class="button__details" type="button" name="."> . </button>
+          <button class="button__details" type="button" name="="> = </button>
+          <button class="button__details button__light--green" type="button" name="+"> + </button>
+      </div>
   </body>
 </html>
