started main.js, started button 7 code

--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
       <div class="calculator__details">
           <button class="button__details" type="button" name="C"> C </button>
           <textarea class="input__details"name="name" rows="8" cols="80"></textarea>
-          <button class="button__details" type="button" name="7"> 7 </button>
+          <button 
+            data-js="button__7"
+            class="button__details"
+            type="button"
+            name="7"> 7
+        </button>
           <button class="button__details" type="button" name="8"> 8 </button>
           <button class="button__details" type="button" name="9"> 9 </button>
           <button class="button__details button__light--green" type="button" name="/"> / </button>
