changed textarea section into <h2> for better success in javascript

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <body>
       <div class="calculator__details">
           <button class="button__details" type="button" name="C"> C </button>
-          <textarea class="input__details"name="name" rows="8" cols="80"></textarea>
-          <button 
+          <h2 class="input__details"></h2>
+          <button
             data-js="button__7"
             class="button__details"
             type="button"
