was able to get number 7 to appear in ouput section

--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
     <meta charset="utf-8">
     <link
           rel="stylesheet" href="styles/main.css">
-    <script src="2.4-calculator/main.js" charset="utf-8"></script>
+    <script src="js/main.js" charset="utf-8"></script>
     <title></title>
   </head>
   <body>
       <div class="calculator__details">
           <button class="button__details" type="button" name="C"> C </button>
-          <h2 class="input__details"></h2>
+          <h2
+            data-js="output" class="input__details">
+          </h2>
           <button
             data-js="button__7"
             class="button__details"
