began to systematically placing the corresponding code to each number button on the calculator

--- a/index.html
+++ b/index.html
@@ -14,15 +14,30 @@
             data-js="output" class="input__details">
           </h2>
           <button
-            data-js="button__7"
-            class="button__details"
-            type="button"
-            name="7"> 7
-        </button>
-          <button class="button__details" type="button" name="8"> 8 </button>
-          <button class="button__details" type="button" name="9"> 9 </button>
+              data-js="button__7"
+              class="button__details"
+              type="button"
+              name="7"> 7
+          </button>
+          <button
+              data-js="button__8"
+              class="button__details"
+              type="button"
+              name="8"> 8
+          </button>
+          <button
+              data-js="button__9"
+              class="button__details"
+              type="button"
+              name="9"> 9
+          </button>
           <button class="button__details button__light--green" type="button" name="/"> / </button>
-          <button class="button__details" type="button" name="4"> 4 </button>
+          <button
+              data-js="button__4"
+              class="button__details"
+              type="button"
+              name="4"> 4
+          </button>
           <button class="button__details" type="button" name="5"> 5 </button>
           <button class="button__details" type="button" name="6"> 6 </button>
           <button class="button__details button__light--green" type="button" name="*"> * </button>
