--- a/index.html
+++ b/index.html
@@ -38,10 +38,23 @@
               type="button"
               name="4"> 4
           </button>
-          <button class="button__details" type="button" name="5"> 5 </button>
-          <button class="button__details" type="button" name="6"> 6 </button>
+          <button
+              data-js="button__5"
+              class="button__details"
+              type="button"
+              name="5"> 5
+          </button>
+          <button
+              data-js="button__6"
+              class="button__details"
+              type="button"
+              name="6"> 6 </button>
           <button class="button__details button__light--green" type="button" name="*"> * </button>
-          <button class="button__details" type="button" name="1"> 1 </button>
+          <button
+              data-js="button__1"
+              class="button__details" type="button"
+              name="1"> 1
+        </button>
           <button class="button__details" type="button" name="2"> 2 </button>
           <button class="button__details" type="button" name="3"> 3 </button>
           <button class="button__details button__light--green" type="button" name="-"> - </button>
