--- a/index.html
+++ b/index.html
@@ -52,13 +52,29 @@
           <button class="button__details button__light--green" type="button" name="*"> * </button>
           <button
               data-js="button__1"
-              class="button__details" type="button"
+              class="button__details"
+              type="button"
               name="1"> 1
-        </button>
-          <button class="button__details" type="button" name="2"> 2 </button>
-          <button class="button__details" type="button" name="3"> 3 </button>
+          </button>
+          <button
+              data-js="button__2"
+              class="button__details"
+              type="button"
+              name="2"> 2
+          </button>
+          <button
+              data-js="button__3"
+              class="button__details"
+              type="button"
+              name="3"> 3
+          </button>
           <button class="button__details button__light--green" type="button" name="-"> - </button>
-          <button class="button__details" type="button" name="0"> 0 </button>
+          <button
+              data-js="button__0"
+              class="button__details"
+              type="button"
+              name="0"> 0
+          </button>
           <button class="button__details" type="button" name="."> . </button>
           <button class="button__details" type="button" name="="> = </button>
           <button class="button__details button__light--green" type="button" name="+"> + </button>
