finishing exponent buttons, figured out that I had to place the / symbol in parens and quotes

--- a/index.html
+++ b/index.html
@@ -31,7 +31,12 @@
               type="button"
               name="9"> 9
           </button>
-          <button class="button__details button__light--green" type="button" name="/"> / </button>
+          <button
+              data-js="divide"
+              class="button__details button__light--green"
+              type="button"
+              name="/"> /
+          </button>
           <button
               data-js="button__4"
               class="button__details"
@@ -49,7 +54,11 @@
               class="button__details"
               type="button"
               name="6"> 6 </button>
-          <button class="button__details button__light--green" type="button" name="*"> * </button>
+          <button
+              data-js="button__*"
+              class="button__details button__light--green"
+              type="button"
+              name="*"> * </button>
           <button
               data-js="button__1"
               class="button__details"
