--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
   </head>
   <body>
       <div class="calculator__details">
-          <button class="button__details" type="button" name="C"> C </button>
+          <button
+              data-js="clear"
+              class="button__details"
+              type="button"
+              name="C"> C
+          </button>
           <h2
             data-js="output" class="input__details">
           </h2>
@@ -55,7 +60,7 @@
               type="button"
               name="6"> 6 </button>
           <button
-              data-js="button__*"
+              data-js="multiply"
               class="button__details button__light--green"
               type="button"
               name="*"> * </button>
@@ -77,16 +82,35 @@
               type="button"
               name="3"> 3
           </button>
-          <button class="button__details button__light--green" type="button" name="-"> - </button>
+          <button
+          data-js="subtract"
+          class="button__details button__light--green" type="button"
+          name="-"> -
+          </button>
           <button
               data-js="button__0"
               class="button__details"
               type="button"
               name="0"> 0
           </button>
-          <button class="button__details" type="button" name="."> . </button>
-          <button class="button__details" type="button" name="="> = </button>
-          <button class="button__details button__light--green" type="button" name="+"> + </button>
+          <button
+              data-js="decimal"
+              class="button__details"
+              type="button"
+              name="."> .
+          </button>
+          <button
+              data-js="equals"
+              class="button__details"
+              type="button"
+              name="="> =
+          </button>
+          <button
+              data-js="addition"
+              class="button__details button__light--green"
+              type="button"
+              name="+"> +
+          </button>
       </div>
   </body>
 </html>
