--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
               name="C"> C
           </button>
           <h2
-            data-js="output" class="input__details">
+              data-js="output"
+              class="input__details">
           </h2>
           <button
               data-js="button__7"
@@ -83,9 +84,9 @@
               name="3"> 3
           </button>
           <button
-          data-js="subtract"
-          class="button__details button__light--green" type="button"
-          name="-"> -
+              data-js="subtract"
+              class="button__details button__light--green" type="button"
+              name="-"> -
           </button>
           <button
               data-js="button__0"
