changed font color of numbers to white, also trying to make it to where the button shows the click

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <div class="calculator__details">
           <button
               data-js="clear"
-              class="button__details"
+              class="button__details--White"
               type="button"
               name="C"> C
           </button>
@@ -21,19 +21,19 @@
           </h2>
           <button
               data-js="button__7"
-              class="button__details"
+              class="button__details--White"
               type="button"
               name="7"> 7
           </button>
           <button
               data-js="button__8"
-              class="button__details"
+              class="button__details--White"
               type="button"
               name="8"> 8
           </button>
           <button
               data-js="button__9"
-              class="button__details"
+              class="button__details--White"
               type="button"
               name="9"> 9
           </button>
@@ -45,19 +45,19 @@
           </button>
           <button
               data-js="button__4"
-              class="button__details"
+              class="button__details--White"
               type="button"
               name="4"> 4
           </button>
           <button
               data-js="button__5"
-              class="button__details"
+              class="button__details--White"
               type="button"
               name="5"> 5
           </button>
           <button
               data-js="button__6"
-              class="button__details"
+              class="button__details--White"
               type="button"
               name="6"> 6 </button>
           <button
@@ -66,20 +66,21 @@
               type="button"
               name="*"> * </button>
           <button
+              id="colorClick"
               data-js="button__1"
-              class="button__details"
+              class="button__details--White"
               type="button"
               name="1"> 1
           </button>
           <button
               data-js="button__2"
-              class="button__details"
+              class="button__details--White"
               type="button"
               name="2"> 2
           </button>
           <button
               data-js="button__3"
-              class="button__details"
+              class="button__details--White"
               type="button"
               name="3"> 3
           </button>
@@ -90,19 +91,19 @@
           </button>
           <button
               data-js="button__0"
-              class="button__details"
+              class="button__details--White"
               type="button"
               name="0"> 0
           </button>
           <button
               data-js="decimal"
-              class="button__details"
+              class="button__details--White"
               type="button"
               name="."> .
           </button>
           <button
               data-js="equals"
-              class="button__details"
+              class="button__details--White"
               type="button"
               name="="> =
           </button>
