--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="js/main.js" charset="utf-8"></script>
     <title></title>
   </head>
-  <body>
+  <body class="body__details">
       <div class="calculator__details">
           <button
               data-js="clear"
@@ -66,7 +66,6 @@
               type="button"
               name="*"> * </button>
           <button
-              id="colorClick"
               data-js="button__1"
               class="button__details--White"
               type="button"
