working on details and getting my input display to hold content within its margins

--- a/index.html
+++ b/index.html
@@ -113,5 +113,6 @@
               name="+"> +
           </button>
       </div>
+    <div class="test"> this is a test </div>  
   </body>
 </html>
